@@ -14,7 +14,7 @@ concurrency:
 jobs:
   linux-build-and-test:
     name: "Linux"
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v8
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v9
     secrets: inherit
     with:
       matrix-os-version: "[ 'ubuntu-latest' ]"
@@ -23,14 +23,14 @@ jobs:
       persist-python-version: "3.10"  # persist artifacts for the oldest supported Python version
   macos-build-and-test:
     name: "MacOS"
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v8
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v9
     secrets: inherit
     with:
       matrix-os-version: "[ 'macos-latest' ]"
       matrix-python-version: "[ '3.13' ]"  # only run MacOS tests on latest Python
   windows-build-and-test:
     name: "Windows"
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v8
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v9
     secrets: inherit
     with:
       matrix-os-version: "[ 'windows-latest' ]"
@@ -38,7 +38,7 @@ jobs:
   release:
     name: "Release"
     if: github.ref_type == 'tag'
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-release.yml@v8
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-release.yml@v9
     needs: [ linux-build-and-test, macos-build-and-test, windows-build-and-test ]
     secrets: inherit
     with:
